# Pig-Latin-Cli

./: README.md  piglatincli.py  pyproject.toml
